Fixed z-index layout issue

--- a/src/styles/contextual-indicators.scss
+++ b/src/styles/contextual-indicators.scss
@@ -77,7 +77,6 @@ $icon__five-controls: $svg-start + $five-controls + $svg-end;
     &:after {
         content: "";
         position: absolute;
-        z-index: 1000;
         width: 100%;
         min-height: 29px;
         min-width: 28px;
